[package]
name = "energy_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fake = { version = "2.4", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
mongodb = { version = "2.6.0", features = ["tokio-runtime"] }
csv = "1.2"
sysinfo = "0.29"
bson = "2.6.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1.0"
postgres-types = { version = "0.2", features = ["with-serde_json-1"] }
fs_extra = "1.3"